@@ -1,0 +1,12 @@
+<div id="mdialog-transfersummary" title="" style="padding: 20px;">
+    <div id="mdialog-transfersummary-content" style="height: 400px; overflow-y: auto;">
+        <span class="ui-icon-info">The following items will now be transferred. Would you like to continue?</span>
+        <table>
+            <tr>
+                <td>
+                    <ul id="ulTransferSummary"></ul>
+                </td>
+            </tr>
+        </table>
+    </div>
+</div>
