@@ -41,3 +41,6 @@ garbage data??
 XC_TEST12
 
 e1L000aLEL02CM
+
+--
+scan custody loc to go to BCTransferjs.aspx
