@@ -1,3 +1,9 @@
+Transfer.aspx
+    - added placeholder for dialog
+
+Transfer.aspx.cs
+
+
 Transferjs.aspx
     - added placeholder for dialog
 
